objects/Account.object
<CustomObject>
    <fields>
        <fullName>Future_Service_Zone__c</fullName>
        <label>Future Service Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Champaign 1</fullName>
                </value>
                <value>
                    <fullName>Champaign 2</fullName>
                </value>
                <value>
                    <fullName>Chicagoland - Advanced</fullName>
                </value>
                <value>
                    <fullName>Chicagoland - AVG</fullName>
                </value>
                <value>
                    <fullName>Chicagoland - Lakeshore</fullName>
                </value>
                <value>
                    <fullName>Chicagoland Central</fullName>
                </value>
                <value>
                    <fullName>Chicagoland North 1</fullName>
                </value>
                <value>
                    <fullName>Chicagoland North 2</fullName>
                </value>
                <value>
                    <fullName>Chicagoland North 3</fullName>
                </value>
                <value>
                    <fullName>Chicagoland North 4</fullName>
                </value>
                <value>
                    <fullName>Chicagoland North 5</fullName>
                </value>
                <value>
                    <fullName>Chicagoland - Shamrock</fullName>
                </value>
                <value>
                    <fullName>Chicagoland South 1</fullName>
                </value>
                <value>
                    <fullName>Chicagoland South 2</fullName>
                </value>
                <value>
                    <fullName>Chicagoland South 3</fullName>
                </value>
                <value>
                    <fullName>Chicagoland South 4</fullName>
                </value>
                <value>
                    <fullName>Chicagoland South 5</fullName>
                </value>
                <value>
                    <fullName>Collinsville 1</fullName>
                </value>
                <value>
                    <fullName>Collinsville 2</fullName>
                </value>
                <value>
                    <fullName>Collinsville 3</fullName>
                </value>
                <value>
                    <fullName>Collinsville 4</fullName>
                </value>
                <value>
                    <fullName>Collinsville 5</fullName>
                </value>
                <value>
                    <fullName>Collinsville 6</fullName>
                </value>
                <value>
                    <fullName>Collinsville 7</fullName>
                </value>
                <value>
                    <fullName>Collinsville - D &amp; S Vending</fullName>
                </value>
                <value>
                    <fullName>Peoria 1</fullName>
                </value>
                <value>
                    <fullName>Peoria 2</fullName>
                </value>
                <value>
                    <fullName>Peoria 3</fullName>
                </value>
                <value>
                    <fullName>Peoria 4</fullName>
                </value>
                <value>
                    <fullName>Peoria 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GP_Vendor_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>GP Vendor ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GRJ_Relationship_Manager__c</fullName>
        <label>GRJ Relationship Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alex Plocher</fullName>
                </value>
                <value>
                    <fullName>Chad Dieters</fullName>
                </value>
                <value>
                    <fullName>Charlie Fleck</fullName>
                </value>
                <value>
                    <fullName>Donnie Gorbett</fullName>
                </value>
                <value>
                    <fullName>Lenny Rakers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gaming_Shut_Down__c</fullName>
        <formula>Covid_Region_LU__r.Gaming_Shut_Down__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates that Gaming is currently shut down with the Covid region associated with the county</inlineHelpText>
        <label>Gaming Shut Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grand_Parent__c</fullName>
        <description>Shows the grand parent relationships between parent and child</description>
        <formula>Parent.Parent.Name</formula>
        <inlineHelpText>Shows the grandparent relationship of parents and child relationships</inlineHelpText>
        <label>Grand Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPD_Accel_Revenue_Total_12_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Accel_Revenue_Total_12_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Accel Revenue Total (12 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Accel_Revenue_Total_4_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Accel_Revenue_Total_4_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Accel Revenue Total (4 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Accel_Revenue_Total_8_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Accel_Revenue_Total_8_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Accel Revenue Total (8 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Funds_In_Total_12_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Funds_In_Total_12_weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Funds In Total (12 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Funds_In_Total_4_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Funds_In_Total_4_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Funds In Total (4 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Funds_In_Total_8_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Funds_In_Total_8_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Funds In Total (8 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Funds_Out_Total_12_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Funds_Out_Total_12_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Funds Out Total (12 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Funds_Out_Total_4_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Funds_Out_Total_4_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Funds Out Total (4 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Funds_Out_Total_8_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Funds_Out_Total_8_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Funds Out Total (8 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Funds_in_Avg__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Funds_in_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Funds in Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Revenue_Total_12_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Revenue_Total_12_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Revenue Total (12 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Revenue_Total_4_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Revenue_Total_4_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Revenue Total (4 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Revenue_Total_8_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Revenue_Total_8_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPD Revenue Total (8 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_TSM_Avg__c</fullName>
        <description>Aggregates the Hold Per Day object for the last 6 months if 6 months of monthly HPD Data exists.
Calculation is: Revenue Total (Net Funds) / # of Vgts) / 6.</description>
        <formula>Hold_Per_Day_Total__r.HPD_TSM_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregates the Hold Per Day object for the last 6 months if 6 months of monthy HPD Data exists.
Calculation is: Revenue Total (Net Funds) / # of Vgts) / 6.</inlineHelpText>
        <label>HPD Trailing 6 Mth Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_TTM__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_TTM_Avg__c</formula>
        <label>HPD TTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HQ_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HQ Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HQ_Child_Account__c</fullName>
        <formula>Parent.HQ_Account__c = TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ Child Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HQ_Parent_Account_Id__c</fullName>
        <formula>IF(HQ_Child_Account__c = TRUE,   CASESAFEID(ParentId), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ Parent Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Standalone_ATM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has stand-alone ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical_IGB_License_Number__c</fullName>
        <label>Historical IGB License Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historical_IGB__c</fullName>
        <label>Historical IGB #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Per_Day_Total_Daily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Based on HPD Records of Record type = Daily HPD</description>
        <inlineHelpText>Based on Monthly HPD Data</inlineHelpText>
        <label>Hold Per Day Total (Daily)</label>
        <referenceTo>Hold_Per_Day_Total__c</referenceTo>
        <relationshipLabel>Accounts (Hold Per Day Total (Daily))</relationshipLabel>
        <relationshipName>AccountsForDaily</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hold_Per_Day_Total__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Based on HPD Records of Record type = Monthly HPD</description>
        <inlineHelpText>Based on Monthly HPD Data</inlineHelpText>
        <label>Hold Per Day Total (Monthly)</label>
        <referenceTo>Hold_Per_Day_Total__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IGB_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IGB Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (IGB Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IGB_Establishment_Type__c</fullName>
        <label>IGB Establishment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Establishment</fullName>
                </value>
                <value>
                    <fullName>Fraternal</fullName>
                </value>
                <value>
                    <fullName>Truck Stop</fullName>
                </value>
                <value>
                    <fullName>Large Truck Stop</fullName>
                </value>
                <value>
                    <fullName>Veterans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IGB_Inspection_Date__c</fullName>
        <label>IGB Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IGB_License_Status__c</fullName>
        <formula>IF(NOT(ISNULL(Active_IGB_Gaming_License__r.License_Denied_Date__c)),&quot;Denied&quot;,
IF(AND(NOT(ISNULL(Active_IGB_Gaming_License__r.License_Original_Issue_Date__c)),ISNULL(Active_IGB_Gaming_License__r.License_Denied_Date__c)),&quot;Issued&quot;,
&quot;Status Pending&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGB License Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGB_License__c</fullName>
        <externalId>true</externalId>
        <label>IGB License #</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IGB_Office__c</fullName>
        <label>IGB Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IGB_Office</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IL_Business_Registration_Code_Expiration__c</fullName>
        <label>IL Business Registration Code Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IL_Business_Registration_Code__c</fullName>
        <label>IL Business Registration Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IL_Covid_Region__c</fullName>
        <label>IL Covid Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_which_location_s__c</fullName>
        <label>If yes, which location(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ineligible_Due_to_Local_Ordinance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ineligible Due to Local Ordinance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Held?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keys_To_Location__c</fullName>
        <label>Keys To Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kiosk_ATM_Agreement_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kiosk ATM Agreement Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kiosk_Fee__c</fullName>
        <label>Kiosk Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kiosk_Live_Date__c</fullName>
        <inlineHelpText>This is the date of when the location went live with Kiosks.</inlineHelpText>
        <label>Kiosk Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kiosk_Pictures_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kiosk Pictures Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_PM_Visit_Date__c</fullName>
        <description>Last time PM visited this location</description>
        <label>Last PM Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Special_Project_Date__c</fullName>
        <label>Last Special Project Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Year_s_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Marketing Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Company Generated - Hubspot</fullName>
                </value>
                <value>
                    <fullName>Company Generated - Telemarketing (Internal)</fullName>
                </value>
                <value>
                    <fullName>Company Generated - Telemarketing (External)</fullName>
                </value>
                <value>
                    <fullName>Company Generated - Calls to Service Center</fullName>
                </value>
                <value>
                    <fullName>Company Generated - Website</fullName>
                </value>
                <value>
                    <fullName>Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Partner Operator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Issued_or_Denied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Liq_Licen__c</fullName>
        <formula>Active_Local_Liquor_License__r.License_Issuing_Authority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Liquor Issuing Authority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Asset_Costs__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>Location Asset Costs</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location_Key_ID__c</fullName>
        <label>Location Key ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Key__c</fullName>
        <label>Location Key</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Accel Establishment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Accel_Establishment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_has_AE_Player_TV__c</fullName>
        <label>Location has AE Player TV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_has_Tablet__c</fullName>
        <label>Location has Tablet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_has_monitored_alarm_and_camera__c</fullName>
        <label>Location has monitored alarm and camera?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lock_Region__c</fullName>
        <label>Lock Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Chicagoland</fullName>
                </value>
                <value>
                    <fullName>Collinsville</fullName>
                </value>
                <value>
                    <fullName>Grand River Jackpot</fullName>
                </value>
                <value>
                    <fullName>Rockford</fullName>
                </value>
                <value>
                    <fullName>Springfield</fullName>
                </value>
                <value>
                    <fullName>Tinley Park</fullName>
                </value>
                <value>
                    <fullName>Champaign/Watseka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loyalty_Program_Details__c</fullName>
        <label>Loyalty Program Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loyalty_Program__c</fullName>
        <label>Loyalty Program</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Merge_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Merge Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Merge_Salutation__c</fullName>
        <label>Mail Merge Salutation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maintenance_Date__c</fullName>
        <label>Maintenance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Names__c</fullName>
        <label>Manufacturer Names</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGS</fullName>
                </value>
                <value>
                    <fullName>ARI</fullName>
                </value>
                <value>
                    <fullName>Bally</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>IGT</fullName>
                </value>
                <value>
                    <fullName>MDT</fullName>
                </value>
                <value>
                    <fullName>SPI</fullName>
                </value>
                <value>
                    <fullName>WMS</fullName>
                </value>
                <value>
                    <fullName>Novamatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Co_Op_Spend_YTD__c</fullName>
        <label>Marketing Co-Op Spend YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Co_Op_Spend_YTD_formula__c</fullName>
        <formula>IF(($User.Id =  OwnerId), Marketing_Co_Op_Spend_YTD__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Co-Op Spend YTD (formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Agreement__c</fullName>
        <label>Master Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent_Account_Owner_Change_Date__c</fullName>
        <label>Most Recent Account Owner Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Account_Owner_Change__c</fullName>
        <label>Most Recent Account Owner Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_HPD_VGT_Count__c</fullName>
        <description>Find the VGT Count on the monthly month recent HPD Record attached.</description>
        <formula>/** 
* IF Most recent hold per day is not null. 
* Find the VGT Count on the monthly month recent HPD Record attached. 
* 
*/ 
IF(!ISNULL( Most_Recent_Hold_Per_Day__c), 
 Most_Recent_Hold_Per_Day__r.VGT_Count__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Find the VGT Count on the monthly month recent HPD Record attached.</inlineHelpText>
        <label>Most Recent HPD VGT Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_HPD_Value__c</fullName>
        <formula>Most_Recent_Hold_Per_Day__r.HPD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most Recent HPD Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_HPD_Within_Last_75_days__c</fullName>
        <description>Checks to see if the most recent hpd date is within the last 75 days. (Helps solidify live status of location). Has to go at least 75 as this is a monthly and there is a delay.</description>
        <formula>/**
 * IF Most recent hold per day is not null. 
 *    If it&apos;s greater then 75 days ago.. we assume live in additional to usual other checks such as Accel / Comp Accounts and Accel Live Date.
 *    
 */
IF(!ISNULL( Most_Recent_Hold_Per_Day__c),
   Most_Recent_Hold_Per_Day__r.Date__c  &gt;=  TODAY() - 75,
   false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks to see if the most recent hpd date is within the last 75 days. (Helps solidify live status of location)</inlineHelpText>
        <label>Most Recent HPD Within Last 75_days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_HPD_for_Case_lookup__c</fullName>
        <formula>Most_Recent_Hold_Per_Day__r.HPD__c * Current_VGT_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most Recent HPD (for Case lookup)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Hold_Per_Day__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Most Recent Hold Per Day</label>
        <referenceTo>Hold_Per_Day__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Muni_Auto_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the backed end process upon creation or edit (always update as even on creation it doesn&apos;t run till Data.com updates the lat / long) performed an API query to google and used that to populate the muni lookup.</description>
        <inlineHelpText>Indicates that the backed end process upon creation or edit (always update as even on creation it doesn&apos;t run till Data.com updates the lat / long) performed an API query to google and used that to populate the muni lookup.</inlineHelpText>
        <label>Muni Auto Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MunicipalityLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Updated by Google within 1-3 seconds after creating a new account with an address or updating an account to a new address.</inlineHelpText>
        <label>Municipality</label>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Municipality_Allows_Gaming__c</fullName>
        <formula>MunicipalityLookup__r.Allows_Gaming__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality Allows Gaming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Municipality_Owner__c</fullName>
        <formula>MunicipalityLookup__r.Owner:User.FirstName &amp; &quot; &quot; &amp; MunicipalityLookup__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality_State__c</fullName>
        <formula>TEXT(MunicipalityLookup__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRT_Rounding_Option_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NRT Rounding Option Enabled</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>